# c---lexical-analyzer

./: .gitignore  35gra.tsv  35lex.tsv  CMakeLists.txt  initsyn.txt  main.cpp  makerun.bat  now.txt  run.bat  syntax.txt  syntes.txt  test35.sy
.cache/clangd/index/: Lexer.cpp.8CBF652453571023.idx  Lexer.h.D5FF2B9C87921F38.idx  LexerTest.cpp.7AC54CC28E87EEF2.idx  Preprocessor.cpp.930F5430B0EB02AC.idx  Preprocessor.h.3D4E4ED3101B623E.idx  TokListTest.cpp.41E8CA7AD58AB070.idx  Token.cpp.3F914C81C784158F.idx  Token.h.5E3352EF1ADFD006.idx  TokenList.cpp.73731C54A45B11ED.idx  TokenList.h.B8238659B9543C94.idx  main.cpp.CACFB8616FF5E103.idx
Lex/include/: Lexer.h  Preprocessor.h  Token.h  TokenList.h
Lex/source/: Lexer.cpp  Preprocessor.cpp  Token.cpp  TokenList.cpp
Syn/: syntax.txt
Syn/include/: V.h  Vn.h  Vt.h  analyzer.h  vector_hash.h
Syn/source/: V.cpp  Vn.cpp  Vt.cpp  analyzer.cpp  first.cpp
